--- a/src/assets/font/demo_fontclass.html
+++ b/src/assets/font/demo_fontclass.html
@@ -25,6 +25,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-account"></i>
+                    <div class="name">account</div>
+                    <div class="fontclass">.icon-account</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-ceshi1"></i>
                     <div class="name">测试</div>
                     <div class="fontclass">.icon-ceshi1</div>
