--- a/src/assets/font/demo_symbol.html
+++ b/src/assets/font/demo_symbol.html
@@ -45,6 +45,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-account"></use>
+                    </svg>
+                    <div class="name">account</div>
+                    <div class="fontclass">#icon-account</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-ceshi1"></use>
                     </svg>
                     <div class="name">测试</div>
