--- a/src/assets/font/demo_unicode.html
+++ b/src/assets/font/demo_unicode.html
@@ -45,6 +45,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe62a;</i>
+                    <div class="name">account</div>
+                    <div class="code">&amp;#xe62a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe6ac;</i>
                     <div class="name">测试</div>
                     <div class="code">&amp;#xe6ac;</div>
